--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "manchkin-front",
+  "name": "pixi-webpack-demo",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "make pixi.js game with webpack",
+  "main": "src/js/main.js",
+  "keywords": [
+    "pixi.js",
+    "webpack"
+  ],
+  "author": "yulijun",
+  "license": "MIT",
   "scripts": {
-    "dev": "webpack --config-name dev",
-    "staging": "webpack --config-name staging",
-    "prod": "webpack --config-name prod",
-    "local": "webpack-dev-server --config-name local",
-    "build": "webpack --config-name prod"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open 'google chrome' --config webpack.dev.js",
+    "clean": "rimraf dist",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
-  "author": "Nikolay Filiuk",
-  "license": "UNLICENSED",
+  "dependencies": {
+    "@babel/runtime": "^7.8.4",
+    "babel-preset-es2015": "^6.24.1",
+    "core-js": "^3.6.4",
+    "loader-utils": "^2.0.0",
+    "pixi.js": "^5.2.1"
+  },
   "devDependencies": {
-    "@types/animejs": "^3.1.2",
-    "@types/fontfaceobserver": "0.0.6",
-    "@types/howler": "^2.2.1",
-    "@types/node": "^14.14.33",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "animejs": "^3.2.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.4.1",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "fontfaceobserver": "^2.1.0",
-    "howler": "^2.2.1",
-    "pixi-spine": "^2.1.11",
-    "pixi.js": "^5.3.8",
-    "prettier": "^2.2.1",
-    "ts-loader": "^7.0.2",
-    "tslib": "^2.1.0",
-    "typescript": "^3.9.9",
-    "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.2"
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "cross-env": "^7.0.3",
+    "html-webpack-plugin": "^5.3.2",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
+    "webpack": "^5.55.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0",
+    "webpack-merge": "^5.8.0"
   }
 }
