--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
+    "animejs": "^3.2.1",
     "babel-preset-es2015": "^6.24.1",
     "core-js": "^3.6.4",
     "loader-utils": "^2.0.0",
